tests/baselines/reference/functionOverloads18.errors.txt
==== tests/cases/compiler/functionOverloads18.ts (1 errors) ====
    function foo(bar:{a:number;});
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! functionOverloads18.ts(1,1): error TS2149: Overload signature is not compatible with function definition:
!!! 	Types of property 'a' of types '{ a: string; }' and '{ a: number; }' are incompatible.
!!! 	Types of property 'a' of types '{ a: number; }' and '{ a: string; }' are incompatible.
    function foo(bar:{a:string;}) { return {a:""} }
    